# serializer version: 1
# name: test_default_formatters
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "prompts",
      "prompt",
      "PromptTemplate"
    ],
    "kwargs": {
      "input_variables": [
        "foo"
      ],
      "template": "This is a {foo} test.",
      "template_format": "f-string",
      "partial_variables": {}
    }
  }
  '''
# ---
# name: test_default_formatters.1
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "prompts",
      "prompt",
      "PromptTemplate"
    ],
    "kwargs": {
      "input_variables": [
        "foo"
      ],
      "template": "This is a {foo} test.",
      "template_format": "f-string",
      "partial_variables": {},
      "formatters": {}
    }
  }
  '''
# ---
# name: test_default_formatters.2
  '''
  {
    "lc": 1,
    "type": "not_implemented",
    "id": [
      "langchain",
      "prompts",
      "prompt",
      "PromptTemplate"
    ]
  }
  '''
# ---
